MDEV-25534 Assertion lock_table_has...LOCK_IX

ha_innobase::start_stmt(): Always set m_prebuilt->sql_stat_start.

row_search_mvcc(): Cleanup: Simplify debug assertions.